buildscript {
    ext {
        spring = "2.7.2"
        springCloudVersion = "2021.0.3"
        appVersion = "1.0.9"
        boot = "org.springframework.boot"
        lombok = "org.projectlombok:lombok"
        cloud = "org.springframework.cloud"
        profile = project.hasProperty("profile") ? project.property("profile").toString() : "local"
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("$boot:spring-boot-gradle-plugin:${spring}")
    }
}

plugins {
    id "org.springframework.boot" version "${spring}" apply false
    id "io.spring.dependency-management" version "1.0.12.RELEASE" apply false
}

allprojects {
    apply plugin: "java"
    apply plugin: "org.springframework.boot"
    apply plugin: "io.spring.dependency-management"
    group = "com.chaeking.api"
    version = appVersion
    sourceCompatibility = 17
}

subprojects {
    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }
    repositories {
        mavenCentral()
    }

    dependencies {
        developmentOnly "$boot:spring-boot-devtools"
        annotationProcessor "$boot:spring-boot-configuration-processor"
        testImplementation "$boot:spring-boot-starter-test"
        compileOnly lombok
        annotationProcessor lombok
        testImplementation lombok
        testAnnotationProcessor lombok
    }

    tasks.named("test") {
        useJUnitPlatform()
    }
}